--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,4 +2,9 @@ DATABASE_NAME=
 DATABASE_PASSWORD=
 DATABASE_PORT=
 DATABASE_USER=
-DATABASE_URI=
+DATABASE_HOST=
+DATABASE_TYPE=
+SECRET_KEY=
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+GEMINI_API_KEY=AIzaSyC_DAzCNYsQxvmmseI8rPGovhA5a8YxhVE
