--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,6 @@ FROM python:3.12-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
-
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y \
@@ -10,13 +9,9 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install uv
-
-COPY pyproject.toml .
-
-RUN uv pip install --system fastapi[standard] sqlmodel psycopg2-binary google-generativeai python-jose[cryptography] passlib[bcrypt] pytest
-
 COPY . .
+
+RUN pip install -r requirements.txt
 
 EXPOSE 8000
 
